# Asynchronous-Document-Generator

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/gateway/: Dockerfile  main.py  pyproject.toml
backend/gateway/src/: config.py  database.py  document_router.py  main.py  message_broker.py  routes.py
backend/gateway/src/api/: dependencies.py
backend/gateway/src/api/v1/: router.py
backend/gateway/src/api/v1/routes/: poll_status.py  root.py  routes.py  upload_file.py
backend/gateway/src/core/: config.py  database.py  message_broker.py  minio.py
backend/gateway/src/core/minio/: minio.py
backend/gateway/src/core/rabbitmq/: message_broker.py
backend/gateway/src/db/: database.py  input_files_controller.py
backend/gateway/src/models/: InputFileModel.py  OutputFileModel.py  base.py  input_file.py  output_file.py
backend/gateway/src/repositories/: OutputFileRepo.py  inputFileRepo.py  input_file_repo.py
backend/gateway/src/routes/: document_route.py
backend/gateway/src/services/: MinioService.py
backend/worker/: Dockerfile  main.py  pyproject.toml
backend/worker/src/: config.py  database.py  main.py  message_broker.py  minio.py
backend/worker/src/models/: input_file.py
frontend/: Dockerfile  index.html  package.json  script.js  style.css
frontend/src/: index.html  script.js
frontend/src/api/: client.js
frontend/src/styles/: style.css
